prepare basic structure in html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz - Gothic</title>
   </head>
-  <body></body>
+  <body style="background-color: rgb(76, 55, 55)">
+    <header>
+      <h1>Quiz</h1>
+      <h1>z serii Gothic</h1>
+    </header>
+    <main>
+      <h2>Witamy w quzie z serii o Gothicu!</h2>
+      <p>
+        Na wszystkich poziomach trudności czeka na Ciebie 10 pytań. Na każde z
+        nich będziesz miał_a 20 sekund na wybranie jeden z 4 odpowiedzi. Tylko
+        jedna z nich jest poprawna. Po skończeniu quizu, bedziesz mógł/mogł_a
+        spróbować go powtórzyć, wybrać inny stopień trudności lub przejść do
+        innej tematyki.
+      </p>
+      <div class="chooseDifficulty">
+        <span>Wybierz poziom trudności:</span>
+        <div class="easy">Łatwy</div>
+        <div class="medium">Średni</div>
+        <div class="hard">Trudny</div>
+      </div>
+    </main>
+    <div class="questionAndAnswers">
+      <div class="question">
+        <h2>Pytanie <span class="questionNumber">1</span>:</h2>
+        <h3 class="questionValue">Czy duża jest kolonia karna w Gothic 1</h3>
+      </div>
+      <div class="answers">
+        <div class="answer">Odpowiedź1</div>
+        <div class="answer">Odpowiedź2</div>
+        <div class="answer">Odpowiedź3</div>
+        <div class="answer">Odpowiedź4</div>
+      </div>
+    </div>
+    <div class="endingDiv"></div>
+    <footer>
+      <p>By Bartosz Pindel</p>
+      <a href="https://github.com/Nordslig" target="_blank">Github</a>
+      <a href="">Portfolio</a>
+    </footer>
+  </body>
 </html>
