set nav, small changes in theme object

--- a/index.html
+++ b/index.html
@@ -4,30 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/main.min.css" />
     <title>Quiz - Gothic</title>
   </head>
-  <body style="background-color: rgb(76, 55, 55)">
-    <header>
+  <body class="" style="background-color: rgb(76, 55, 55); position: relative">
+    <nav>
+      <span>MENU</span>
+      <ul>
+        <li>Strona główna</li>
+        <li>Strona główna Quizu</li>
+        <li>O <span class="aboutTheme">Gothic</span></li>
+        <li> 
+          <span>&#169 By Bartosz Pindel</span>
+          <a href="https://github.com/Nordslig" target="_blank">Github</a>
+          <a href="">Portfolio</a>
+        </li>
+      </ul>
+    </nav>
+    <header class="">
       <h1>Quiz</h1>
-      <h1>z serii Gothic</h1>
+      <h1 class="quiz-theme">z serii Gothic</h1>
     </header>
-    <main>
+    <main class="">
       <h2>Witamy w quzie z serii o Gothicu!</h2>
       <p>
         Na wszystkich poziomach trudności czeka na Ciebie 10 pytań. Na każde z
-        nich będziesz miał_a 20 sekund na wybranie jeden z 4 odpowiedzi. Tylko
-        jedna z nich jest poprawna. Po skończeniu quizu, bedziesz mógł/mogł_a
-        spróbować go powtórzyć, wybrać inny stopień trudności lub przejść do
-        innej tematyki.
+        nich będziesz miał_a 20 sekund na wybranie jednej z 4 odpowiedzi. Po
+        skończeniu quizu, bedziesz mógł/mogł_a spróbować go powtórzyć, wybrać
+        inny stopień trudności lub zagrać w quiz o innej tematyce.
       </p>
-      <div class="chooseDifficulty">
+      <div class="choose-difficulty">
         <span>Wybierz poziom trudności:</span>
         <div class="easy">Łatwy</div>
         <div class="medium">Średni</div>
         <div class="hard">Trudny</div>
       </div>
     </main>
-    <div class="questionAndAnswers">
+    <div class="question-and-answers">
       <div class="question">
         <h2>Pytanie <span class="questionNumber">1</span>:</h2>
         <h3 class="questionValue">Czy duża jest kolonia karna w Gothic 1</h3>
@@ -39,9 +52,9 @@
         <div class="answer">Odpowiedź4</div>
       </div>
     </div>
-    <div class="endingDiv"></div>
-    <footer>
-      <p>By Bartosz Pindel</p>
+    <div class="ending"></div>
+    <footer style="display: none;">
+      <p>&#169 By Bartosz Pindel</p>
       <a href="https://github.com/Nordslig" target="_blank">Github</a>
       <a href="">Portfolio</a>
     </footer>
