make new homepage, set up to more quizzes

--- a/index.html
+++ b/index.html
@@ -5,58 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.min.css" />
-    <title>Quiz - Gothic</title>
+    <title>Kłizy - najciekawsze quizy z gier</title>
   </head>
-  <body class="" style="background-color: rgb(76, 55, 55); position: relative">
-    <nav>
-      <span>MENU</span>
-      <ul>
-        <li>Strona główna</li>
-        <li>Strona główna Quizu</li>
-        <li>O <span class="aboutTheme">Gothic</span></li>
-        <li> 
-          <span>&#169 By Bartosz Pindel</span>
-          <a href="https://github.com/Nordslig" target="_blank">Github</a>
-          <a href="">Portfolio</a>
-        </li>
-      </ul>
-    </nav>
-    <header class="">
-      <h1>Quiz</h1>
-      <h1 class="quiz-theme">z serii Gothic</h1>
+  <body class="mainPage">
+    <header>
+      <h1>Kłizy - najlepsze quizy z gier w internecie!</h1>
     </header>
-    <main class="">
-      <h2>Witamy w quzie z serii o Gothicu!</h2>
+    <main>
       <p>
-        Na wszystkich poziomach trudności czeka na Ciebie 10 pytań. Na każde z
-        nich będziesz miał_a 20 sekund na wybranie jednej z 4 odpowiedzi. Po
-        skończeniu quizu, bedziesz mógł/mogł_a spróbować go powtórzyć, wybrać
-        inny stopień trudności lub zagrać w quiz o innej tematyce.
+        Jeśli szukasz quizów o grach, z wyborem trudności i licznikiem czasu -
+        by nie było za łatwo - to dobrze trafił_ś! Mam dla Ciebie parę
+        propozycji:
       </p>
-      <div class="choose-difficulty">
-        <span>Wybierz poziom trudności:</span>
-        <div class="easy">Łatwy</div>
-        <div class="medium">Średni</div>
-        <div class="hard">Trudny</div>
+      <div class="gothic">
+        <img
+          src="../img/gothicBcg.jpg"
+          alt="gothic button background"
+          width="100%"
+          height="100%"
+        />
+        <div class="flexStyle">
+          <span>GOTHIC</span>
+        </div>
       </div>
+      <div class="skyrim">
+        <img
+          src="../img/skyrimBcg.jpg"
+          alt="skyrim button background"
+          width="100%"
+          height="100%"
+        />
+        <div class="flexStyle">
+          <span>SKYRIM</span>
+        </div>
+      </div>
+      <div class="minecraft">
+        <img
+          src="../img/minecraftBcg.jpg"
+          alt="skyrim button background"
+          width="100%"
+          height="100%"
+        />
+        <div class="flexStyle">
+          <span>MINECRAFT</span>
+        </div>
+      </div>
+      <p>
+        Ale nie bój się. Zawsze możesz tu wrócić i sprawdzić się w innym
+        temacie!
+      </p>
     </main>
-    <div class="question-and-answers">
-      <div class="question">
-        <h2>Pytanie <span class="questionNumber">1</span>:</h2>
-        <h3 class="questionValue">Czy duża jest kolonia karna w Gothic 1</h3>
-      </div>
-      <div class="answers">
-        <div class="answer">Odpowiedź1</div>
-        <div class="answer">Odpowiedź2</div>
-        <div class="answer">Odpowiedź3</div>
-        <div class="answer">Odpowiedź4</div>
-      </div>
-    </div>
-    <div class="ending"></div>
-    <footer style="display: none;">
-      <p>&#169 By Bartosz Pindel</p>
-      <a href="https://github.com/Nordslig" target="_blank">Github</a>
+    <footer>
+      <span>&#169; Copyright BARTOSZ PINDEL:</span>
       <a href="">Portfolio</a>
+      <a href="https://github.com/Nordslig" target="_blank">Github</a>
     </footer>
   </body>
 </html>
