--- a/quizGothic.html
+++ b/quizGothic.html
@@ -41,16 +41,16 @@
         <div class="hard">Trudny</div>
       </div>
     </main>
-    <div class="question-and-answers">
+    <div class="qAndA nvisible">
       <div class="question">
-        <h2>Pytanie <span class="questionNumber">1</span>:</h2>
-        <h3 class="questionValue">Czy duża jest kolonia karna w Gothic 1</h3>
+        <h2>Pytanie <span class="questionNumber"></span>:</h2>
+        <h3 class="questionValue"></h3>
       </div>
       <div class="answers">
-        <div class="answer">Odpowiedź1</div>
-        <div class="answer">Odpowiedź2</div>
-        <div class="answer">Odpowiedź3</div>
-        <div class="answer">Odpowiedź4</div>
+        <div class="answer answer1"><button class="answerBtn"></button></div>
+        <div class="answer answer2"><button class="answerBtn"></button></div>
+        <div class="answer answer3"><button class="answerBtn"></button></div>
+        <div class="answer answer4"><button class="answerBtn"></button></div>
       </div>
     </div>
     <div class="ending"></div>
@@ -59,5 +59,9 @@
       <a href="https://github.com/Nordslig" target="_blank">Github</a>
       <a href="">Portfolio</a>
     </footer>
+    <script src="/script/questionsAndAnswers.js"></script>
+    <script src="/script/chooseDifficulty.js"></script>
+    <script src="/script/chooseQuestion.js"></script>
+    <script src="/script/pickAnswer.js"></script>
   </body>
 </html>
