small fixes in choose[difficulty, question, answer], qAA, quiz.html

--- a/quizGothic.html
+++ b/quizGothic.html
@@ -53,7 +53,12 @@
         <div class="answer answer4"><button class="answerBtn"></button></div>
       </div>
     </div>
-    <div class="ending"></div>
+    <div class="endView nvisible">
+      <h2>Twoja gildia to <span class="guild"></span>!</h2>
+      <blockquote class="quote"></blockquote>
+      <h3>Osiągnąłeś wynik <span class="points"></span>/10</h3>
+      <p class="aboutGuild"></p>
+    </div>
     <footer style="display: none;">
       <p>&#169 By Bartosz Pindel</p>
       <a href="https://github.com/Nordslig" target="_blank">Github</a>
@@ -62,6 +67,7 @@
     <script src="/script/questionsAndAnswers.js"></script>
     <script src="/script/chooseDifficulty.js"></script>
     <script src="/script/chooseQuestion.js"></script>
-    <script src="/script/pickAnswer.js"></script>
+    <script src="/script/chooseAnswer.js"></script>
+    <script src="/script/endScreeen.js"></script>
   </body>
 </html>
