--- a/quizGothic.html
+++ b/quizGothic.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="/css/main.min.css" />
     <title>Quiz - Gothic</title>
   </head>
-  <body class="gothicQuiz" style="background-color: rgb(76,55,55); position: relative">
+  <body
+    class="gothicQuiz"
+    style="background-color: #2a1702; position: relative"
+  >
     <nav>
       <ul>
         <li>Kłizy >></li>
         <li>Strona główna</li>
         <li>Wybór trudności</li>
-        <li>O <span class="aboutTheme">Gothic</span>
-        </li>
+        <li>O <span class="aboutTheme">Gothic</span></li>
       </ul>
       <div class="footer">
-        <span>&#169 By Bartosz Pindel:</span>
+        <span>&#169;By Bartosz Pindel:</span>
         <a href="">Portfolio</a>
-        <a href="https://github.com/Nordslig"   target="_blank">Github</a>
-    </div>
+        <a href="https://github.com/Nordslig" target="_blank">Github</a>
+      </div>
     </nav>
     <header class="">
       <h1>Quiz</h1>
@@ -58,9 +60,10 @@
       <blockquote class="quote"></blockquote>
       <h3>Osiągnąłeś wynik <span class="points"></span>/10</h3>
       <p class="aboutGuild"></p>
+      <a href="quizGothic.html">Powrót na główną stronę "Quiz Gothic".</a>
     </div>
-    <footer style="display: none;">
-      <p>&#169 By Bartosz Pindel</p>
+    <footer style="display: none">
+      <p>&#169;By Bartosz Pindel</p>
       <a href="https://github.com/Nordslig" target="_blank">Github</a>
       <a href="">Portfolio</a>
     </footer>
