small fixes on scoreboard, start on scorboard func

--- a/quizGothic.html
+++ b/quizGothic.html
@@ -17,11 +17,12 @@
           <li>Kłizy >></li>
           <li>Strona główna</li>
           <li>Wybór trudności</li>
+          <!-- <a href="./scoreboard.html">Wyniki</a> -->
           <li>O <span class="aboutTheme">Gothic</span></li>
         </ul>
         <div class="footer">
           <span>&#169;By Bartosz Pindel:</span>
-          <a href="">Portfolio</a>
+          <a href="#">Portfolio</a>
           <a href="https://github.com/Nordslig" target="_blank">Github</a>
         </div>
       </nav>
@@ -64,6 +65,25 @@
       <p>Podaj swój nick</p>
       <input type="text" name="name" class="iptName" />
       <button class="saveData">Zapisz i pokaż wyniki</button>
+    </div>
+    <div class="scoreboard">
+      <ul class="organizer">
+        <ul class="userNum">
+          Lp
+        </ul>
+        <ul class="nickname">
+          Nazwa
+        </ul>
+        <ul class="whichDiff">
+          Poziom Trudności
+        </ul>
+        <ul class="totalPoints">
+          */10 pkt
+        </ul>
+        <ul class="currentDate">
+          Data
+        </ul>
+      </ul>
     </div>
     <script src="/script/questionsAndAnswers.js"></script>
     <script src="/script/chooseDifficulty.js"></script>
