small fixes and progress in scoreboard.js

--- a/quizGothic.html
+++ b/quizGothic.html
@@ -62,13 +62,16 @@
       </div>
       <div class="scoreboard nvisible">
         <table>
-          <tr>
-            <th>Lp</th>
-            <th>Nazwa</th>
-            <th>Poziom trudności</th>
-            <th>*/10 Pkt</th>
-            <th>Data</th>
-          </tr>
+          <thead>
+            <tr>
+              <th>Lp</th>
+              <th>Nazwa</th>
+              <th>Poziom trudności</th>
+              <th>*/10 Pkt</th>
+              <th>Data</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
         </table>
       </div>
     </div>
